// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setInactive should return an api call to call activate 1`] = `
Object {
  "controller": "job_titles",
  "controllerMethod": "activate.json",
  "data": Object {
    "id": 1,
  },
  "types": Array [
    undefined,
    undefined,
    undefined,
  ],
}
`;

exports[`setInactive should return an api call to call deactivate 1`] = `
Object {
  "controller": "job_titles",
  "controllerMethod": "deactivate.json",
  "data": Object {
    "id": 1,
  },
  "types": Array [
    undefined,
    undefined,
    undefined,
  ],
}
`;
